--- a/src/search.njk
+++ b/src/search.njk
@@ -4,7 +4,7 @@ permalink:
   search: /search/
 ---
 
-layout: layouts/base.njk
+<h2>Ray here</h2>
 
 <div class="container">
   <div class="prose prose-zinc dark:prose-invert mb-4">
